--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -324,7 +324,7 @@
 @media (max-width: 480px) {
   .hero {
     min-height: 100vh;
-    padding: 160px var(--page-padding) 0;
+    padding: 420px var(--page-padding) 0;
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
